--- a/fitness tracker/Info.plist
+++ b/fitness tracker/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This will allow us to track your distance as you run.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -23,9 +25,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationUsageDescription</key>
-	<string>Enable location services to track your running distance.</string>
+	<string>This will allow us to track your distance as you run.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Enable location services to track your running distance.</string>
+	<string>This will allow us to track your distance as you run.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
